[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
Flask-WTF = "^1.1.1"
mongoengine = "^0.27.0"
pymongo = "^4.3.3"
WTForms = "^3.0.1"
Flask-Bcrypt = "^1.0.1"
Flask-Login = "^0.6.2"
flask-mongoengine = "^1.0.0"
Flask-SocketIO = "^5.3.4"
extensions = "^0.4"
extension = "^1.0.0"
Redberry = "0.0.7.15"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"